	* Add a new method RangeMap<T>::toRange() to break a RangeMap into a
	  list of Range objects.  5ac6568
        * Bug fix in Range<T>::equal()  9cf9e75

===========================
Release 1.01    27/06/2014
	* Throw exceptions when an illegal operation is requested.
	  The exception feature can be disabled by define the macro
	        CPP_RANGE_NO_EXCEPTION
	  before including all range header files.
        * Allow construct a range from a string (range text)
            Example:  new RangeMap<int>("[6:0][0][3:-4]");

===========================
Release 1.0     25/06/2014
        * The first release.
        * Provide three C++ classes for user:
                RangeElement            A single range expression.
                Range                   A multidimensional range vector.
                RangeMap                An arbitrary set of multiple range vectors
                                        with the same dimension.